fix overflow bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  overflow: hidden;
+}
 
 
 
